...
    private val auth: FirebaseAuth = FirebaseAuth.getInstance()
    private val db: FirebaseDatabase = FirebaseDatabase.getInstance("https://vidyakhoj-927fb-default-rtdb.firebaseio.com/")

    fun registerUser(
        fullName: String,
        location: String,
        email: String,
        password: String,
        onSuccess: () -> Unit,



        onError: (String) -> Unit
    ) {
...
